# c_plus_plus

./: .gitignore
Модуль 1. Введение в язык C++/Тема 1: Вводное занятие/: hw.txt
Модуль 1. Введение в язык C++/Тема 2: Пишем свой “Hello, World!”/: hw.txt  links.txt  main.cpp
Модуль 1. Введение в язык C++/Тема 3: Базовый синтаксис языка C++/: hw.txt  links.txt  main.cpp
Модуль 1. Введение в язык C++/Тема 4: Такие разные функции/: hw.txt  links.txt  main.cpp
Модуль 1. Введение в язык C++/Тема 5: Модульность. Линковка/: CMakeLists.txt  hw.txt  links.txt  main.cpp  sum.cpp  sum.h
Модуль 2. Классы и структуры/Тема 1: Структуры и классы/: hw.txt  links.txt  main.cpp
Модуль 2. Классы и структуры/Тема 2: ООП в C++/: hw.txt  links.txt  main.cpp
Модуль 2. Классы и структуры/Тема 3: Полиморфизм/: hw.txt  main.cpp
Модуль 3: Основы unit-тестирования/Тема 1: Понятие unit-тестирования/: CMakeLists.txt  hw.txt  lib.h  links.txt  main.cpp  test_lib.cpp
Модуль 3: Основы unit-тестирования/Тема 2: Инструменты для unit-тестирования/: links.txt
Модуль 4: Стандартная библиотека и полезные алгоритмы/Тема 1: Общий обзор стандартной библиотеки/: hw.txt  links.txt  main.cpp
Модуль 4: Стандартная библиотека и полезные алгоритмы/Тема 2: Подробнее о контейнерах и вводе-выводе/: hw.txt  main.cpp  test.txt
Модуль 4: Стандартная библиотека и полезные алгоритмы/Тема 3: Алгоритмы, которые лучше знать /: hw.txt  main.cpp
Модуль 5: Работа со сторонними библиотеками/Тема 1: Работа с библиотеками вручную/: CMakeLists.txt  hw.txt  links.txt  main.cpp  tree.xml
Модуль 5: Работа со сторонними библиотеками/Тема 1: Работа с библиотеками вручную/lib/: CMakeLists.txt  greet.cpp  greet.h
Модуль 5: Работа со сторонними библиотеками/Тема 2: Современные средства автоматизации. Пакетные менеджеры, снова CMake/: CMakeLists.txt  hw.txt  main.cpp
Модуль 5: Работа со сторонними библиотеками/Тема 3: Сборка библиотек из исходников/: CMakeLists.txt  hw.txt  main.cpp
Модуль 5: Работа со сторонними библиотеками/Тема 3: Сборка библиотек из исходников/lib/: CMakeLists.txt  add.h
Модуль 6: Всё глубже и глубже. Тонкости/Тема 1: Исключения в C++. Использование и нюансы. Гарантии безопасности/: hw.txt  main.cpp
Модуль 6: Всё глубже и глубже. Тонкости/Тема 2: Семантика перемещения, noexcept, и как они нам помогают/: hw.txt  main.cpp
Модуль 6: Всё глубже и глубже. Тонкости/Тема 3: Работа с динамической памятью/: hw.txt  main.cpp
Модуль 6: Всё глубже и глубже. Тонкости/Тема 4: Умные указатели/: hw.txt  main.cpp
(+18 files in other folders)
